# 3d-software-renderer

./: CMakeLists.txt  LICENSE  Makefile  README.md
src/: Application.cpp  Application.h  constants.h  main.cpp
src/lib/: math.cpp  math.h
